--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,10 @@ project(vulkan_tut)
 
 find_package(Vulkan REQUIRED)
 
+add_subdirectory(vecMathsLib)
+
 add_executable(${PROJECT_NAME} main.cpp)
 include_directories(GLFW/include ${Vulkan_INCLUDE_DIRS})
 
 
-target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/GLFW/mingw/libglfw3.a ${Vulkan_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/GLFW/mingw/libglfw3.a ${Vulkan_LIBRARIES} vecMaths)
