--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ project(vulkan_tut)
 
 find_package(Vulkan REQUIRED)
 
-add_subdirectory(vecMathsLib)
+add_subdirectory(glm)
 
 add_executable(${PROJECT_NAME} main.cpp)
-include_directories(GLFW/include ${Vulkan_INCLUDE_DIRS})
+include_directories(GLFW/include ${Vulkan_INCLUDE_DIRS} glm)
 
 
-target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/GLFW/mingw/libglfw3.a ${Vulkan_LIBRARIES} vecMaths)
+target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/GLFW/mingw/libglfw3.a ${Vulkan_LIBRARIES} glm)
