--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Vulkan REQUIRED)
 add_subdirectory(glm)
 
 add_executable(${PROJECT_NAME} main.cpp)
-include_directories(GLFW/include ${Vulkan_INCLUDE_DIRS} glm)
+include_directories(GLFW/include ${Vulkan_INCLUDE_DIRS} glm stb)
 
 
 target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/GLFW/mingw/libglfw3.a ${Vulkan_LIBRARIES} glm)
